<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fond_color"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="17dp"
        android:text="@string/numero_de_hijos"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/textNumeroHijos"
        android:layout_width="298dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:autofillHints="number"
        android:ems="10"
        android:hint="@string/ingrese_la_cantidad"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="129dp"
        android:text="@string/estado_civil"
        android:textSize="25sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rgEstadoCivil"
        android:layout_width="262dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="178dp">

        <RadioButton
            android:id="@+id/rbViuda"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/viuda" />

        <RadioButton
            android:id="@+id/rbCasada"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/casada" />

        <RadioButton
            android:id="@+id/rbSoltera"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/soltera" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="329dp"
        android:background="@drawable/btn_principal"
        android:text="@string/calcular"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="216dp"
        android:layout_marginBottom="328dp"
        android:background="@drawable/btn_secondary"
        android:text="@string/limpiar"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textResultado"
        android:layout_width="298dp"
        android:layout_height="231dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="43dp"
        android:text="@string/resultado"
        android:textSize="24sp"
        android:textStyle="bold"/>
</RelativeLayout>